# nonebot-plugin-bili-fav-watcher

./: .gitignore  README.md  pyproject.toml
nonebot_plugin_bili_fav_watcher/: __init__.py  command.py  config.py  core.py  local.py  util.py
