[project]
name = "nonebot-plugin-bili-fav-watcher"
version = "0.1.0"
description = "A Bilibili user video favorites monitor"
readme = "README.md"
requires-python = ">=3.8, <4.0"
authors = [
    { name = "SakanaVollerei", email = "kawaiiorv@gmail.com" }
]
dependencies = [
    "nonebot2>=2.2.0",
    "bilibili-api-python>=16.2.0"
]
license = {text = "MIT"}

keywords = ["nonebot2", "bilibili"]

[project.urls]
Homepage = "https://github.com/kawaiior/nonebot-plugin-bili-fav-watcher"

[tool.nonebot]
plugins = ["nonebot_plugin_bili_fav_watcher"]
adapters = [
    "nonebot.adapters.onebot.v11"
]
